# solar-screen-brightness

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  build.rs  install.bat
.github/workflows/: rust.yml
app/: Cargo.toml  build.rs
app/lib/macos/: libBearLibTerminal.dylib
app/src/: brightness.rs  config.rs  main.rs  wide.rs
app/src/console/: bearlib.rs  mod.rs  windows.rs
app/src/controller/: apply.rs  mod.rs  monitor.rs  worker.rs
app/src/lock/: mod.rs  unix.rs  windows.rs
app/src/tray/: mod.rs  qt.rs  windows.rs
app/src/tui/: edit_config.rs  main_menu.rs  mod.rs  show_status.rs
assets/icon assets/: icon.ai
docs/: LINUX_GUIDE.md  LINUX_MONITORS.md
installer/: .gitignore  Cargo.toml  README.md  build.rs  windows.nsi
installer/src/: assets.rs  main.rs  tui.rs
installer/src/common/: linux.rs  mod.rs  windows.rs
installer/src/install/: linux.rs  mod.rs  windows.rs
installer/src/uninstall/: linux.rs  mod.rs  windows.rs
linux/: README.md  ubuntu_install.sh
src/: apply.rs  brightness.rs  calculator.rs  cli.rs  common.rs  config.rs  console.rs  controller.rs  lib.rs  lock.rs  main.rs  monitor.rs  runner.rs  shell_icon.rs  ssc.rs  str_ext.rs  tray.rs  tui.rs  wide.rs
src/console/: bearlib.rs  mod.rs  unix.rs  windows.rs
src/controller/: apply.rs  mod.rs  state.rs
src/event_watcher/: linux.rs  mod.rs  windows.rs
src/gui/: app.rs  brightness_settings.rs  help.rs  location_settings.rs  mod.rs  monitor_overrides.rs  status.rs
src/lock/: mod.rs  unix.rs  windows.rs
src/tray/: mod.rs  qt.rs  windows.rs
src/tui/: edit_config.rs  main_menu.rs  mod.rs  show_status.rs  status.rs
src/unique/: linux.rs  mod.rs  windows.rs
windows/: Cargo.toml  build.rs
windows-bindings/: Cargo.toml  build.rs
windows-bindings/src/: lib.rs
windows/src/: lib.rs
