[package]
name = "solar-screen-brightness"
version = "0.1.0"
authors = ["Jacob Halsey <jacob@jhalsey.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
anyhow = "1.0.43"
brightness = { git = "https://github.com/jacob-pro/brightness", rev  = "c442ea8" }
chrono = "0.4"
clap = "3.0.0-beta.5"
config = "0.10.1"
directories = "2.0"
enum-iterator = "0.6.0"
env_logger = "0.8.4"
futures = "0.3"
geocoding = "0.2.0"
lazy_static = "1.4.0"
log = "0.4.14"
maplit = "1.0.2"
rust-embed = "5.5.1"
serde = { version = "1.0.110", features = ["derive"] }
sunrise-sunset-calculator = "0.2.1"
thiserror = "1.0"
toml = "0.5"
validator = "0.10"
validator_derive = "0.10"

[target.'cfg(unix)'.dependencies]
cpp_core = "0.6.0"
qt_widgets = "0.5.0"
qt_gui = "0.5.0"
qt_core = "0.5.0"
nix = "0.22.1"
cursive = { default-features = false, features = ["blt-backend"], version = "0.16" }

[target.'cfg(windows)'.dependencies]
solar-screen-brightness-windows = { path = "../windows" }

[target.'cfg(windows)'.dependencies.windows]
version = "0.29.0"
features = [
    "std",
    "alloc",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_RemoteDesktop",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
winres = "0.1"

[target.'cfg(unix)'.build-dependencies]
cmake = "0.1"

[target.'cfg(target_os="linux")'.dependencies]
udev = "^0.6.2"
