[package]
name = "solar-screen-brightness-windows-bindings"
version = "0.1.0"
edition = "2018"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = "0.18.0"

# This is a hack to work around inability to set Target-specific features
# https://github.com/rust-lang/cargo/issues/1197
# We are using version 0.16 but from Git instead of Crates IO which allows Cargo to have two versions of
# 0.16 in its dependency tree
[dependencies.cursive]
default-features = false
features = ["pancurses-backend"]
git = "https://github.com/gyscos/cursive"
rev = "73453b20976df68b58ec190b848f5d9790634662"


[build-dependencies]
windows = "0.18.0"
