[package]
name = "solar-screen-brightness-windows"
version = "0.1.0"
edition = "2018"

# This is a hack to work around inability to set Target-specific features
# https://github.com/rust-lang/cargo/issues/1197
# We are using version 0.16 but from Git instead of Crates IO which allows Cargo to have two versions of
# 0.16 in its dependency tree
[dependencies.cursive]
default-features = false
features = ["pancurses-backend"]
git = "https://github.com/gyscos/cursive"
rev = "73453b20976df68b58ec190b848f5d9790634662"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.29.0"
features = [
    "std",
    "alloc",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
]

